2001-06-05  Marius Vollmer  <mvo@zagadka.ping.de>

	* extensions.c (scm_c_register_extension): Allow NULL as library
	name.
	(load_extension): Ignore NULL library names when comparing.
	
	* hash.c (scm_hasher): Use SCM_UNPACK in the case labels so that
	non-pointers are being compared.  Thanks to Alexander Klimov!

2001-06-04  Gary Houston  <ghouston@arglist.com>

	* rw.c (scm_write_string_partial): new procedure implementing
	write-string/partial in (ice-9 rw).
	* rw.h: declare scm_write_string_partial.
	
2001-06-04  Marius Vollmer  <mvo@zagadka.ping.de>

	* keywords.c (keyword_print): Substract 1 from length of symbol
	name, accounting for the silly dash.

	* dynl.c (scm_registered_modules, scm_clear_registered_modules):
	Do not emit deprecation warning.

	Added exception notice to all files.

	* dynl.c: Include "deprecation.h".

2001-06-03  Marius Vollmer  <mvo@zagadka.ping.de>

	* dynl.c (scm_register_module_xxx, scm_registered_modules,
	scm_clear_registered_modules): Deprecated.

2001-06-02  Rob Browning  <rlb@cs.utexas.edu>

	* .cvsignore: add guile_filter_doc_snarfage guile-snarf-docs
	guile-snarf-docs-texi.

	* fports.c: HAVE_ST_BLKSIZE changed to
	HAVE_STRUCT_STAT_ST_BLKSIZE.
	(scm_fport_buffer_add): HAVE_ST_BLKSIZE changed to
	HAVE_STRUCT_STAT_ST_BLKSIZE.

	* filesys.c (scm_stat2scm): HAVE_ST_RDEV changed to
	HAVE_STRUCT_STAT_ST_RDEV.
	(scm_stat2scm): HAVE_ST_BLKSIZE changed to
	HAVE_STRUCT_STAT_ST_BLKSIZE.
	(scm_stat2scm): HAVE_ST_BLOCKS changed to
	HAVE_STRUCT_STAT_ST_BLOCKS.

2001-06-02  Marius Vollmer  <mvo@zagadka.ping.de>

	* strports.c (scm_eval_string): Use scm_primitive_eval_x instead
	of scm_eval_x to allow module changes between the forms in the
	string.  Set/restore module using scm_c_call_with_current_module.

	* mkstemp.c: New file, slightly modified from libiberties
	mkstemps.c.

2001-05-31  Michael Livshin  <mlivshin@bigfoot.com>

	* guile-snarf-docs.in, guile-snarf-docs-texi.in,
	filter-doc-snarfage.c: new files.
